[package]
name = "framebuffer"
version = "0.1.0"
authors = ["Louis Chauvet <louis.chauvet@free.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
memmap = "0.7"
libc = "0.2"
image = "0.23"
font8x8 = "0.2"
cgmath = "0.17"
